Fix some spacing issues

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,8 +6,11 @@ body {
   padding: 0;
 }
 
-h1 {
+header {
   text-align: center;
+}
+
+h1 {
   color: #fef96f;
   font-family: "Titillium Web", sans-serif;
   text-shadow: 3px 3px #ed588d;
